<resources>
    <string name="app_name">TestApp</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="notes">Notes</string>
    <string name="camera">Camera</string>
    <string name="draft">Drafts</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="profile_description">Profile Description</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="note_detail">Note Description</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an Account? Register here.</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <array name="media_options">
        <item>Gallery</item>
        <item>Camera</item>
    </array>
</resources>