<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">
    
    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginStart="@dimen/fifteen_dp"
        android:layout_marginEnd="@dimen/fifteen_dp"
        app:boxStrokeColor="@color/purple_700"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginStart="@dimen/fifteen_dp"
        android:layout_marginEnd="@dimen/fifteen_dp"
        app:boxStrokeColor="@color/purple_700"
        app:passwordToggleEnabled="true"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/forgot_password_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        android:layout_margin="@dimen/twenty_dp"
        android:text="@string/forgot_password"
        android:textSize="@dimen/eighteen_sp"
        android:textAlignment="center"
        android:textColor="#5A5ACD"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_link"
        android:text="@string/login"
        android:textAllCaps="false"
        android:background="@drawable/button_bg"
        android:layout_marginTop="@dimen/twenty_dp"
        android:layout_marginStart="@dimen/fifteen_dp"
        android:layout_marginEnd="@dimen/fifteen_dp"
        app:backgroundTint="@null"/>

    <TextView
        android:id="@+id/create_accout_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/twenty_dp"
        android:text="@string/don_t_have_an_account_register_here"
        android:textSize="@dimen/eighteen_sp"
        android:textAlignment="center"
        android:textColor="#868695"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>