<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddNoteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/add_note_app_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/add_note"
                    android:textColor="@android:color/background_light"
                    android:layout_marginStart="@dimen/ten_dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <ImageView
                    android:id="@+id/add_note_camera_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="@dimen/ten_dp"
                    android:src="@drawable/camera"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_note_app_bar"
        android:layout_marginTop="@dimen/five_dp"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:hint="@string/title">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_note_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_note_title"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:layout_marginTop="@dimen/five_dp"
        android:hint="@string/note_detail">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:lines="10"
            android:gravity="top"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/add_note_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="@dimen/ten_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_note_detail"/>

    <TextView
        android:id="@+id/add_note_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_note_image"
        android:padding="@dimen/eight_dp"
        android:textSize="@dimen/eighteen_sp"
        android:layout_marginTop="@dimen/five_dp"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:layout_marginBottom="@dimen/ten_dp"
        android:text="@string/add_reminder"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/five_dp"
        android:layout_marginLeft="@dimen/ten_dp"
        android:layout_marginRight="@dimen/ten_dp"
        android:gravity="center">

        <Button
            android:id="@+id/save_note_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/five_dp"
            app:backgroundTint="#6EBF8B"
            android:text="@string/save"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/cancel_note_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/ten_dp"
            android:layout_marginStart="@dimen/five_dp"
            android:text="@string/cancel"
            android:textAllCaps="false"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>