<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_bg_img"
    tools:context=".activity.SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ten_dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/eighteen_sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ten_dp"
                android:layout_marginTop="@dimen/twenty_dp"
                android:layout_marginRight="@dimen/ten_dp"
                android:background="@drawable/button_bg"
                android:padding="@dimen/eight_dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_field" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#6EBF8B"
                app:hintTextColor="#000000"
                android:textColorHint="#000000"
                app:boxStrokeWidth="2dp"
                android:layout_marginLeft="@dimen/ten_dp"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginRight="@dimen/ten_dp"
                android:hint="@string/last_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#6EBF8B"
                app:hintTextColor="#000000"
                android:textColorHint="#000000"
                app:boxStrokeWidth="2dp"
                android:layout_marginLeft="@dimen/ten_dp"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginRight="@dimen/ten_dp"
                android:hint="@string/email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#6EBF8B"
                app:hintTextColor="#000000"
                android:textColorHint="#000000"
                app:boxStrokeWidth="2dp"
                android:layout_marginLeft="@dimen/ten_dp"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginRight="@dimen/ten_dp"
                android:hint="@string/password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_address"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#6EBF8B"
                app:hintTextColor="#000000"
                android:textColorHint="#000000"
                app:boxStrokeWidth="2dp"
                android:layout_marginLeft="@dimen/ten_dp"
                android:layout_marginTop="@dimen/five_dp"
                android:layout_marginRight="@dimen/ten_dp"
                android:hint="@string/confirm_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_field"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="#6EBF8B"
                app:hintTextColor="#000000"
                android:textColorHint="#000000"
                app:boxStrokeWidth="2dp"
                android:layout_marginLeft="@dimen/ten_dp"
                android:layout_marginTop="@dimen/twenty_dp"
                android:layout_marginRight="@dimen/ten_dp"
                android:hint="@string/first_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    <TextView
        android:id="@+id/login_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/twenty_dp"
        android:text="@string/already_have_an_account_login"
        android:textStyle="bold"
        android:textSize="@dimen/eighteen_sp"
        android:textColor="#6774B6"
        android:textAlignment="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>